[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "python-template"
version = "0.1.0"
[tool.poetry.dependencies]
numpy = "^1.22.2"
pandas = "^1.4.2"
python = "^3.8"
disnake = "^2.5.2"
dotenv = "^0.0.5"
table2ascii = "^0.3.0"
schedule = "^1.1.0"
python-dotenv = "^0.20.0"
[tool.poetry.dev-dependencies]
